--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/pro-regular-svg-icons": "^5.10.0",
     "@fortawesome/pro-solid-svg-icons": "^5.10.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/gsap": "^1.20.2",
     "@types/react-redux": "^7.1.1",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.4",
@@ -20,7 +21,9 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "es6-object-assign": "^1.1.0",
+    "gsap": "^2.1.3",
     "include-media": "^1.4.9",
+    "perlin": "^1.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
@@ -30,7 +33,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "three": "^0.109.0"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
